# agentic-inner-loop-workshop

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.devcontainer/: Dockerfile.py311  Dockerfile.py312  README.md  bash_env.sh  compose.yaml  devcontainer.json  postCreate.sh
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_task.md  02_bug.md  03_eval_regression.md  config.yml
.github/instructions/: docs.instructions.md  python.instructions.md
.github/prompts/: 01_draft_spec.prompt.md  02_create_plan.prompt.md  03_split_to_issues.prompt.md  04_implement_issue.prompt.md  05_eval_analyze.prompt.md  06_feedback_to_issues.prompt.md
.github/workflows/: ci.yml
datasets/: README.md  triage_dataset.csv
docs/: issues-draft.md  plan.md  providers.md  spec.md
docs/facilitator/: guide.md
docs/templates/: eval-report.template.md  plan.template.md  spec.template.md
docs/workshop/: 00_overview.md  01_setup.md  02_spec.md  03_plan.md  04_issues.md  05_implement.md  06_run_and_evaluate.md  07_feedback.md  08_retro.md  09_hands-on-scenario.md  README.md
reports/eval/: README.md
scripts/: csv_to_jsonl.py  eval_report_to_issues.py
src/triage_assistant/: __init__.py  cli.py  schema.py  triage.py
src/triage_assistant/adapters/: __init__.py  chat_completions.py  dummy.py  foundry.py  github_models.py  openai_compatible.py
tests/: test_cli.py  test_dummy_adapter.py  test_hosted_adapter_errors.py  test_schema.py
