[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "triage-assistant"
version = "0.1.0"
description = "Workshop project: an Issue Triage Assistant CLI for practicing an agentic inner loop."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "shinyay" }]
keywords = ["workshop", "copilot", "ai-toolkit", "agentic", "triage"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-python-dateutil",
]

[project.scripts]
triage-assistant = "triage_assistant.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
xfail_strict = true

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["reports", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["triage_assistant"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_no_return = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
mypy_path = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/triage_assistant"]

[tool.hatch.build.targets.sdist]
include = ["src/triage_assistant", "tests", "docs", "datasets", "scripts", ".github", ".vscode", "README.md", "LICENSE", ".env.example"]
